# routes/api.php
@@ -22,8 +22,8 @@ Route::post('/register', 'Api\AuthController@register');
 
 Route::post('/login', 'Api\AuthController@login');
 
+//auth controller methods
 Route::middleware('auth:api')->get('/test/{id}', 'Api\AuthController@test');
-
 Route::middleware('auth:api')->post('/insert_roles', 'Api\AuthController@insert_roles');
-
 Route::middleware('auth:api')->post('/logout', 'Api\AuthController@logout');
+Route::middleware('auth:api')->get('/get_current_user', 'Api\AuthController@getCurrentUser');
